[gd_scene load_steps=2 format=3 uid="uid://ckljit058oqry"]

[ext_resource type="Script" path="res://scripts/OptionsMenuScene.gd" id="1_l3np8"]

[node name="Options Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3np8")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 89.0
offset_top = 65.0
offset_right = 327.0
offset_bottom = 178.0
text = "Hier kommt Infotext hin und Links"

[node name="Website" type="Button" parent="Control"]
layout_mode = 2
offset_left = 149.0
offset_top = 95.0
offset_right = 292.0
offset_bottom = 132.0
text = "Website 1"

[node name="Website2" type="Button" parent="Control"]
layout_mode = 2
offset_left = 149.0
offset_top = 147.0
offset_right = 292.0
offset_bottom = 184.0
text = "Website 2"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Control/Website" to="." method="_on_website_pressed"]
[connection signal="pressed" from="Control/Website2" to="." method="_on_website_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
